# libicepic

./: CMakeLists.txt  flake.nix  libicepic.scm
include/: icepic.h
src/: icepic.c
test/: test.c
